[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/settings.gd" type="Script" id=1]
[ext_resource path="res://down.png" type="Texture" id=2]
[ext_resource path="res://up.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[node name="settings" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Panel" type="Panel" parent="Control"]
margin_right = 198.0
margin_bottom = 242.0

[node name="w" type="Label" parent="Control/Panel"]
anchor_right = 1.0
margin_bottom = 14.0
text = "render distance(does not make sense to make it higher)"
align = 1
autowrap = true

[node name="w2" type="Label" parent="Control/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -99.0
margin_top = -46.0
margin_right = 99.0
margin_bottom = -2.0
text = "map size
(does not affect performance)"
align = 1
autowrap = true

[node name="w3" type="Label" parent="Control/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -99.0
margin_top = 33.0
margin_right = 99.0
margin_bottom = 70.0
text = "chunk size
(lower it for stable fps)"
align = 1
autowrap = true

[node name="SpinBox" type="SpinBox" parent="Control/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.0
margin_top = -12.0
margin_right = 67.0
margin_bottom = 33.0
min_value = 50.0
max_value = 5000.0
step = 100.0
value = 1000.0
rounded = true
allow_greater = true

[node name="SpinBox2" type="SpinBox" parent="Control/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -61.0
margin_top = -85.0
margin_right = 59.0
margin_bottom = -47.0
min_value = 2.0
max_value = 5.0
value = 2.0
rounded = true

[node name="SpinBox3" type="SpinBox" parent="Control/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -61.0
margin_top = 63.0
margin_right = 59.0
margin_bottom = 113.0
min_value = 4.0
max_value = 32.0
value = 16.0
rounded = true

[node name="renderplus" type="TouchScreenButton" parent="Control/Panel"]
position = Vector2( 0, 32 )
scale = Vector2( 5, 5 )
normal = ExtResource( 3 )
pressed = ExtResource( 2 )
shape = SubResource( 1 )
visibility_mode = 1

[node name="renderminus" type="TouchScreenButton" parent="Control/Panel"]
position = Vector2( 144, 32 )
scale = Vector2( 5, 5 )
normal = ExtResource( 2 )
pressed = ExtResource( 3 )
shape = SubResource( 1 )
visibility_mode = 1

[node name="mapplus" type="TouchScreenButton" parent="Control/Panel"]
position = Vector2( 0, 112 )
scale = Vector2( 5, 5 )
normal = ExtResource( 3 )
pressed = ExtResource( 2 )
shape = SubResource( 1 )
visibility_mode = 1

[node name="mapminus" type="TouchScreenButton" parent="Control/Panel"]
position = Vector2( 144, 112 )
scale = Vector2( 5, 5 )
normal = ExtResource( 2 )
pressed = ExtResource( 3 )
shape = SubResource( 1 )
visibility_mode = 1

[node name="chunkplus" type="TouchScreenButton" parent="Control/Panel"]
position = Vector2( 0, 192 )
scale = Vector2( 5, 5 )
normal = ExtResource( 3 )
pressed = ExtResource( 2 )
shape = SubResource( 1 )
visibility_mode = 1

[node name="chunkminus" type="TouchScreenButton" parent="Control/Panel"]
position = Vector2( 144, 192 )
scale = Vector2( 5, 5 )
normal = ExtResource( 2 )
pressed = ExtResource( 3 )
shape = SubResource( 1 )
visibility_mode = 1

[connection signal="focus_exited" from="Control/Panel/SpinBox" to="." method="_on_SpinBox_focus_exited"]
[connection signal="value_changed" from="Control/Panel/SpinBox" to="." method="_on_SpinBox_value_changed"]
[connection signal="focus_exited" from="Control/Panel/SpinBox2" to="." method="_on_SpinBox2_focus_exited"]
[connection signal="value_changed" from="Control/Panel/SpinBox2" to="." method="_on_SpinBox2_value_changed"]
[connection signal="focus_exited" from="Control/Panel/SpinBox3" to="." method="_on_SpinBox3_focus_exited"]
[connection signal="value_changed" from="Control/Panel/SpinBox3" to="." method="_on_SpinBox3_value_changed"]
[connection signal="pressed" from="Control/Panel/renderplus" to="." method="_on_renderplus_pressed"]
[connection signal="pressed" from="Control/Panel/renderminus" to="." method="_on_renderminus_pressed"]
[connection signal="pressed" from="Control/Panel/mapplus" to="." method="_on_mapplus_pressed"]
[connection signal="pressed" from="Control/Panel/mapminus" to="." method="_on_mapminus_pressed"]
[connection signal="pressed" from="Control/Panel/chunkplus" to="." method="_on_chunkplus_pressed"]
[connection signal="pressed" from="Control/Panel/chunkminus" to="." method="_on_chunkminus_pressed"]
